--- a/client/admin/css/index.css
+++ b/client/admin/css/index.css
@@ -211,3 +211,33 @@ body {
     z-index: 5;
   }
 }
+
+
+/* Error screen */
+.error {
+  background-color: white;
+  width: 90vw;
+  height: 90vh;
+  z-index: 999;
+  position: fixed;
+  top: 5vh;
+  left: 5vw;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  color: black;
+}
+
+.close {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  border: 1px solid red;
+  border-radius: 50%;
+  padding: 0px 5px;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+}
+
+/* Error screen ends here */
