--- a/client/admin/css/dashboard.css
+++ b/client/admin/css/dashboard.css
@@ -375,3 +375,70 @@ td {
 thead {
     font-weight: bold;
 }
+
+.input-group {
+    /* display: flex; */
+    align-items: center;
+}
+
+.input-group button {
+    padding: 5px 10px;
+    cursor: pointer;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
+    margin: 0 5px;
+}
+
+.input-group input[type="number"] {
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 20px;
+    appearance: textfield;
+}
+
+
+/* Error screen */
+.error {
+    background-color: white;
+    width: 90vw;
+    height: 90vh;
+    z-index: 999;
+    position: fixed;
+    top: 5vh;
+    left: 5vw;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
+
+.close {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    border: 1px solid red;
+    border-radius: 50%;
+    padding: 0px 5px;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+}
+
+/* Error screen ends here */
+
+.confirmBox {
+    background-color: white;
+    width: 90vw;
+    height: 90vh;
+    z-index: 999;
+    position: fixed;
+    top: 5vh;
+    left: 5vw;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
