--- a/client/admin/css/dashboard.css
+++ b/client/admin/css/dashboard.css
@@ -1,3 +1,10 @@
+@import url('./users.css');
+@import url('./tasks.css');
+@import url('./error.css');
+@import url('./confirmBox.css');
+@import url('./sidebar.css');
+@import url('./main.css');
+
 body {
     background-color: rgb(220, 220, 220);
     padding: 0;
@@ -18,102 +25,6 @@ body {
     width: 990px;
     margin: 50px auto;
 }
-
-/*slidebar侧边栏*/
-.slidebar {
-    width: 20%;
-    min-height: 690px;
-    float: left;
-    border-right: 1px solid rgb(235, 235, 235);
-    background-color: rgb(247, 247, 247);
-}
-
-.slidebar .logo {
-    height: 145px;
-    border-bottom: 1px solid rgb(235, 235, 235);
-}
-
-.slidebar ul {
-    padding: 0;
-    margin: 0;
-}
-
-.slidebar li {
-    list-style-type: none;
-    margin: 0;
-    position: relative;
-}
-
-.slidebar li:before {
-    content: "";
-    font-family: 'icomoon';
-    speak: none;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    position: absolute;
-    display: block;
-    line-height: 40px;
-    color: rgb(102, 102, 102);
-    right: 20px;
-    -webkit-font-smoothing: antialiased;
-}
-
-.slidebar ul a {
-    color: rgb(140, 140, 140);
-    text-decoration: none;
-    font: 16px/40px helvetica, verdana, sans-serif;
-    box-sizing: border-box;
-    border-bottom: 1px solid rgb(235, 235, 235);
-    display: block;
-    box-shadow: inset 0 1px 0 rgb(255, 255, 255);
-    text-indent: 20px;
-    text-transform: capitalize;
-}
-
-.slidebar li:hover a {
-    background-color: rgb(255, 255, 255);
-    box-shadow: 1px 0 0 rgb(255, 255, 255), inset 5px 0 0 -1px rgb(234, 83, 63);
-}
-
-/*main*/
-.main {
-    float: left;
-    width: 79%;
-    height: 690px;
-    background-color: rgb(255, 255, 255);
-    position: relative;
-    font-family: helvetica, verdana, sans-serif;
-}
-
-/*mainContent*/
-.mainContent h4 {
-    line-height: 1;
-    font-size: 18px;
-    margin: 1.3em 0 1em;
-    margin-left: 17px;
-}
-
-.mainContent>div {
-    position: absolute;
-    opacity: 0;
-    -webkit-transition: opacity 200ms linear;
-    -moz-transition: opacity 200ms linear;
-    -ms-transition: opacity 200ms linear;
-    transition: opacity 200ms linear;
-}
-
-/*通过opacity来切换不同的选项卡*/
-.mainContent>div:target {
-    opacity: 1;
-}
-
-.mainContent h2 {
-    margin: 1em 30px;
-    color: rgb(234, 83, 63);
-    font-size: 20px;
-}
-
 
 #dashboard>div {
     border: 1px solid rgb(235, 235, 235);
@@ -348,163 +259,4 @@ body {
     height: 49px;
     line-height: 50px;
     border-left: 1px solid rgb(235, 235, 235);
-}
-
-
-/* User table starts here */
-.userList,
-.taskList {
-    margin: auto 20px;
-}
-
-#users-table {
-    width: 120%;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-thead {
-    background-color: #f2f2f2;
-}
-
-thead td, tbody td {
-    padding: 8px;
-}
-
-table,
-th, td {
-    border: 1px solid black;
-}
-
-
-thead,
-td {
-    padding: 10px;
-    text-align: left;
-}
-
-thead {
-    font-weight: bold;
-}
-
-.input-group {
-    /* display: flex; */
-    align-items: center;
-}
-
-.input-group button {
-    padding: 5px 10px;
-    cursor: pointer;
-    border: none;
-    background-color: #007bff;
-    color: white;
-    border-radius: 5px;
-    margin: 0 5px;
-}
-
-.input-group input[type="number"] {
-    padding: 5px 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 20px;
-    appearance: textfield;
-}
-
-/* User table ends here */
-
-
-/* Daily Tasks table starts here */
-#tasks-table {
-    width: 100%;
-}
-/* Daily Tasks table ends here */
-
-
-/* Error screen */
-.error {
-    background-color: white;
-    width: 90vw;
-    height: 90vh;
-    z-index: 999;
-    position: fixed;
-    top: 5vh;
-    left: 5vw;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    color: black;
-}
-
-.close {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    border: 1px solid red;
-    border-radius: 50%;
-    padding: 0px 5px;
-    background-color: red;
-    color: white;
-    cursor: pointer;
-}
-
-/* Error screen ends here */
-
-.confirmBox {
-    background-color: rgb(234, 234, 236);
-    border: 1px solid black;
-    border-radius: 10px;
-    box-shadow: 3px 3px 3px 3px;
-    width: 30vw;
-    height: 30vh;
-    z-index: 999;
-    position: fixed;
-    top: 35vh;
-    left: 35vw;
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: black;
-}
-
-.options {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-}
-
-.options button {
-    font-size: 18px;
-    padding: 5px 15px;
-    margin: 10px;
-    border: 1px solid black;
-    border-radius: 5px;
-    box-shadow: 3px 3px 3px black;
-    color: #fff;
-    cursor: pointer;
-}
-
-.options button:active {
-    box-shadow: 0px 0px 0px;
-    margin-bottom: 2px;
-}
-
-.yesOption {
-    background-color: rgb(73, 192, 73);
-}
-
-.yesOption:hover {
-    background-color: rgb(40, 139, 40);
-}
-
-.noOption {
-    background-color: rgb(206, 48, 48);
-}
-
-.noOption:hover {
-    background-color: rgb(173, 30, 30);
 }
