--- a/client/admin/css/tasks.css
+++ b/client/admin/css/tasks.css
@@ -45,5 +45,68 @@ td input[type="text"] {
     white-space: pre-wrap;
 }
 
-
 /* Reward Box ends here */
+
+
+/* Task creation form */
+.creation-form {
+    width: 400px;
+    height: 400px;
+    position: fixed;
+    top: 15%;
+    left: 35%;
+    background-color: #ffff;
+    border: 1px solid #ffff;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px 3px;
+    padding: 20px;
+    color: black;
+    margin: 0 auto;
+    overflow-y: scroll;
+    display: none;
+}
+
+.creation-form label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.creation-form input[type="text"],
+.creation-form input[type="datetime-local"] {
+    width: calc(100% - 10px); /* Subtracting padding */
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.creation-form button {
+    padding: 8px 15px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.creation-form button:hover {
+    background-color: #0056b3;
+}
+
+#createTaskBtn {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    float: right;
+}
+
+#createTaskBtn:hover {
+    background-color: #0056b3;
+}
+
+/* Task creation form ends here */
